# mavlink2grpc

./: .gitignore  README.md  setup.sh
bridge/: CMakeLists.txt
bridge/docs/implementations/: Connection.md  ITransport.md  MessageConverter.md  Router.md  SerialTransport.md  Server.md  Service.md  TcpTransport.md  UdpTransport.md  gRPCConverter.md
bridge/src/: Bridge.cc  Bridge.h  main.cc
bridge/src/mavlink/: Connection.cc  Connection.h  SerialTransport.cc  SerialTransport.h  Transport.h  UdpTransport.cc  UdpTransport.h
bridge/src/service/: Logger.cc  Logger.h  Router.cc  Router.h  Server.cc  Server.h  Service.cc  Service.h
bridge/src/transport/: UdpTransport.cc
examples/python/: README.md  takeoff.py
generator/: README.md  main.py  requirements.txt
generator/src/: __init__.py  generator.py  models.py  parser.py  type_converter.py
generator/templates/: bridge_service.proto.j2  dialect.proto.j2  message_converter.cc.j2  message_converter.h.j2
generator/test/: __init__.py  test_common.py  test_generator.py  test_parser.py
inspector/: app.js  index.html  package.json  server.js  style.css
